feat: add object schema to context
